--- a/index.html
+++ b/index.html
@@ -54,22 +54,22 @@
     <div class="container text-center">
       <h1>Hartford-Area Habitat for Humanity has Expanded Construction Outside Hartford Over Time</h1>
       <p class="lead">by Myrian Ayala and Emma Wellins</p>
-      <p class="lead">Last updated on 12/06/2021</p>
-      <p class="lead">for Data Visualization for All</br>with Prof. Jack Dougherty</br>Trinity College, Hartford CT, USA</p>
+      <p class="lead">Last updated on 12/09/2021</p>
+      <p class="lead">for Data Visualization for All</br>with Prof. Jack Dougherty</br>Trinity College, Hartford CT, USA</p><br>
     </div>
   </header>
 
   <section id="story">
     <div class="container">
       <div class="row">
-        <div class="col-lg-8 mx-auto">
+        <div class="col-lg-8 mx-auto"><br>
           <h2>Story</h2><br>
           <p>Since 1989, <a href="https://hartfordhabitat.org/"> Hartford-Area Habitat for Humanity </a> has been building affordable homes in the city of Hartford and outlying areas. One challenge the organization continually faces is finding land they can purchase and obtain permission to build affordable homes, since some suburban towns have resisted housing for low-income residents. Therefore, we wanted to investigate where Hartford-Area Habitat for Humanity has built homes in  North Central Connecticut over time. In order to do this, we were required to collect and visualize data illustrating the build year of the 249 homes that Habitat provided to us in a spreadsheet. From there, we could place these homes in the context of Habitat’s expansion within Hartford as well as outlying towns across a three-decade time span. Through collaboration with our Habitat for Humanity partners, they shared their goal of expanding their reach beyond the city of Hartford, and our data collection and visuaizations present the extent at which they have.</p>
           <p>Keeping Habitat’s goal in mind, we have made two charts that provide both a summary that speaks more directly to Habitat’s expansion in North Central Connecticut over the decade as well as Habitat’s data organized by location and corresponding decade of construction.</p>
           <p>The following column bar chart examines the percentages of where Habitat built homes by decade. Although we can observe that this chart demonstrates that the majority of Habitat homes built reside in Hartford, we can also see that the percentage of Habitat homes in outlying towns has slowly increased over time.</p>
 
-          <iframe title="Over each decade, Habitat for Humanity has built an increasing percentage of its homes in outlying areas outside of the city of Hartford " aria-label="Stacked Column Chart" id="datawrapper-chart-1NvfH" src="https://datawrapper.dwcdn.net/1NvfH/8/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
-  </script>
+          <iframe title="Over each decade, Habitat for Humanity has built an increasing percentage of its homes in outlying areas beyond Hartford " aria-label="Stacked Column Chart" id="datawrapper-chart-1NvfH" src="https://datawrapper.dwcdn.net/1NvfH/12/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
+</script>
 
           <p>Figure 1: This chart displays Hartford-Area Habitat for Humanity percentage of homes built by decade in Hartford and outlying towns. This chart was created with Datawrapper. Explore the <a href="https://datawrapper.dwcdn.net/1NvfH/6/">interactive version</a></p>
 
@@ -117,12 +117,12 @@
   </table>
 
 <br>
-          <p>Table 1: Numbers of homes built by Hartford-Area Habitat for Humanity in Hartofrd and outlying towns by decade. <a href="https://docs.google.com/spreadsheets/d/1afE8CD_XAwPYus-3bXJnoTGshckebVCjOiqI0lGFbt0/edit?usp=sharing" > See data source </a></p>
+          <p>Table 1: Numbers of homes built by Hartford-Area Habitat for Humanity in Hartford. </p>
 
 </center>
 <p>The majority of the data provided by our Habitat parners are of addresses in Hartford--178 out of 249 total addresses--so in order to represent the addresses that lie outside of Hartford, we created a bar chart that provides the number of Habitat homes built in each town by decade, illustrated with colors that correspond to the decade in which they were built. With this visualization, the distinctions between outlying towns become clearer. New Britain stands out as the town that Habitat has done the most work in other than Hartford, which is reasonable given New Britain’s geographic proximity to Hartford. Additionally, New Britain has the largest population of all outlying towns. It is reasonable that Habitat would pursue construction in larger towns given their tendency to work in more population-dense areas such as Hartford.
 </p>
-<iframe title="Hartford-Area Habitat for Humanity homes in outlying areas outside of the city, CT by decade  " aria-label="Stacked Bars" id="datawrapper-chart-HBvRG" src="https://datawrapper.dwcdn.net/HBvRG/5/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="358"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
+<iframe title="Hartford-Area Habitat for Humanity homes built outside the city, CT by decade  " aria-label="Stacked Bars" id="datawrapper-chart-HBvRG" src="https://datawrapper.dwcdn.net/HBvRG/9/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="362"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
 </script>
 <p>Figure 2: Numbers of homes built by Hartford-Area Habitat for Humanity in outlying areas by decade. This chart was created with Datawrapper. Explore the <a href="https://datawrapper.dwcdn.net/HBvRG/6/" > interactive version </a></p>
 <p>To have a better understanding of where these 249 Habitat homes are located, we decided to create an interactive choropleth map for each decade. Each map displays the name and the estimated number of homes built in each town. The dark blue represents greater amounts of homes built in a designated town, while the lighter shades represent the presence of fewer Habitat homes in a given town. For example, the dark blue represents the city of Hartford since the largest number of homes in each decade are found in Connecticut’s capital. Towns that appear in gray indicate where Hartford-Area Habitat for Humanity has not built any homes in that location.
@@ -145,7 +145,7 @@
   <section id="data" class="bg-light">
     <div class="container">
       <div class="row">
-        <div class="col-lg-8 mx-auto">
+        <div class="col-lg-8 mx-auto"><br>
           <h2>Data</h2>
           <p>
 To find the 'year built' and/or 'year sold' for the given homes, students Emma Wellins and Myrian Ayala searched the town government's property record databases and Jack Dougherty double-checked our data for accuracy. During the data collection process, there were several addresses whose build years could not be easily identified using the assessor databases found below. Through communication with our Habitat partners as well as more in-depth research, we attempted to identify the build years of as many challenging addresses as possible in order to have the most accurate and complete set of data to visualize.</p>
@@ -164,7 +164,7 @@ To find the 'year built' and/or 'year sold' for the given homes, students Emma W
 <a href="https://www.vernon-ct.gov/departments-services/property-cards-and-gis-information">Vernon Assessor Database</a><br>
 <a href="https://www.mytaxbill.org/inet/bill/home.do?town=windsor">Windsor Assessor Database</a><br>
 </p>
-<p> Within each area's assessor database, we searched by house number and street, then viewed PDF's of the provided property records to identify the year built or sold by Habitat.</p>
+<p> Within each area's assessor database, we searched by house number and street, then viewed PDF's of the provided property records to identify the year built or sold by Habitat and we added to the shared <a href="https://docs.google.com/spreadsheets/d/1afE8CD_XAwPYus-3bXJnoTGshckebVCjOiqI0lGFbt0/edit?usp=sharing"> database spreadsheet </a> created.</p>
         </div>
       </div>
     </div>
@@ -178,7 +178,7 @@ To find the 'year built' and/or 'year sold' for the given homes, students Emma W
           <h2>Credits</h2>
           <p>Myrian Ayala and Emma Wellins, along with help from classmates Nassar Abdelrahman and Nolan McKenna, shared a spreadsheet that contained each of the 249 Habitat addresses and evenly split the search for year built/sold dates, and Jack Dougherty supervised and double-checked their data collection for accuracy.</p>
 <p> Hands on DataVisualization book written by Professor Dourgherty and Independent Technologist Ilya Ilyankou: <a href="https://handsondataviz.org/"> https://HandsOnDataViz.org </a></p>
-<P> Datawrapper, an open-source tool used to create interactive charts.</p>
+<P> <a href="https://www.datawrapper.de/"> Datawrapper</a>, an open-source tool used to create interactive charts.</p>
 <p> MIKE SWIFT Courant, Staff Writer. "Housing for Needy may be Built at Former Poor Farm in Simsbury." The Hartford Courant (1923-), Jun 03, 1989. <a href="https://www.proquest.com/docview/1638179800?accountid=14405"> http://ezproxy.trincoll.edu/login?url=https://www.proquest.com/historical-newspapers/housing-needy-may-be-built-at-former-poor-farm/docview/1638179800/se-2?accountid=14405 </a> </p>
         </div>
       </div>
